<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/yeloow"
    tools:context=".Home">


    <TextView
        android:id="@+id/txtDoVui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="50sp"
        android:textColor="@color/red"/>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp">
    </View>
    
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/dovui"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp">
    </View>

    <info.hoang8f.widget.FButton
        android:id="@+id/btnBatDau"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/play_game" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"></View>

    <info.hoang8f.widget.FButton
        android:id="@+id/btnHD"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Hướng Dẫn" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"></View>

    <info.hoang8f.widget.FButton
        android:id="@+id/btnThoat"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/quit" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"></View>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/btnSound"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:background="@color/fbutton_color_peter_river"
        android:onClick="playSong"
        fbutton:srcCompat="@android:drawable/ic_lock_silent_mode_off" />

    <ImageButton
        android:id="@+id/btnOutSound"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="100dp"
        android:background="@color/fbutton_color_peter_river"
        android:onClick="stopSong"
        fbutton:srcCompat="@android:drawable/ic_lock_silent_mode" />

</RelativeLayout>

</LinearLayout>
